.argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realm-keeper-ingress
  labels:
    app.kubernetes.io/name: realm-keeper-ingress
    app.kubernetes.io/part-of: realm-keeper
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: realmkeeper.faukinator.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: realm-keeper-backend
                port:
                  number: 8000
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: realm-keeper-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: realm-keeper-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - realmkeeper.faukinator.com
      secretName: realm-keeper-tls
